# store-django

./: Procfile  README.md  build.sh  db.sqlite3  manage.py  pyproject.toml  requirements.txt
ProyectoWeb/: settings.py  wsgi.py
ProyectoWebApp/: apps.py  urls.py  views.py
ProyectoWebApp/templates/ProyectoWebApp/: base.html  home.html
autenticacion/: urls.py  views.py
autenticacion/templates/login/: login.html
autenticacion/templates/registro/: registro.html
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog.html  categorias.html
carro/: carro.py  context_processor.py  urls.py  views.py
contacto/: forms.py  urls.py  views.py
contacto/templates/contacto/: contacto.html
pedidos/: admin.py  apps.py  models.py  urls.py  views.py
pedidos/migrations/: 0001_initial.py
proyectoweb/: asgi.py  settings.py  urls.py  wsgi.py
proyectowebapp/: apps.py  urls.py  views.py
proyectowebapp/templates/proyectowebapp/: base.html  home.html
servicios/: admin.py  models.py  urls.py  views.py
servicios/migrations/: 0001_initial.py  0002_alter_servicio_imagen.py
servicios/templates/servicios/: servicios.html
static/proyectowebapp/css/: gestion.css
tienda/: admin.py  apps.py  models.py  urls.py  views.py
tienda/migrations/: 0001_initial.py  0002_auto_20210222_1110.py  0002_auto_20220122_2028.py  0003_auto_20210222_1152.py  0004_auto_20210222_1202.py  0005_merge_0002_auto_20220122_2028_0004_auto_20210222_1202.py  0006_alter_categoriaprod_id_alter_producto_id.py
tienda/templates/carro/: widget.html
(+3 files in other folders)
